ags (2.1.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing integration test ags_check_system_functional_osc_server_test

ags (2.1.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented cache options of AgsSoundcardEditor
	* implemented pulseaudio cache

ags (2.1.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved gsequencer.desktop
	* improved ags_xorg_application_context_prepare() open file
	* added gsequencer.appdata.xml

ags (2.1.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler error

ags (2.1.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes

ags (2.1.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing datadir prefix in Makefile.am

ags (2.1.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented write xmlns to files
	* improved gsequencer.destkop.in
	* added application-x-gsequencer.xml to specify MIME handler

ags (2.1.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added gsequencer.png icons for hicolor icon theme

ags (2.1.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added OSC server documentation

ags (2.1.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed typo in prototype declaration

ags (2.1.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_soundcard_set_start_note_offset()
	* implemented ags_soundcard_get_start_note_offset()
	* implemented ags_sequencer_set_start_note_offset()
	* implemented ags_sequencer_get_start_note_offset()
	* implemented AgsSeekable of ags-play-wave recall
	* implemented AgsSeekable of ags-capture-wave recall
	* improved apply min/max audio channels and pads to instruments
	* improved AgsResizeEditor to respect min/max channel alignment
	* improved AgsResizeAudio task to resize audio channels prior to pads